Edit to group three columns

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
+/* lay-out tool
+-------------------------------------------------
 * {
    outline: 1px solid red !important;
 }
+*/
 
 /* Shared
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
